# object_detection

./: .gitignore  CMakeLists.txt  README.MD  README.md  package.xml
docs/: usege.md
launch/: object_detection.py
src/: camera_node.cpp  detection_node.cpp
